# openstack-resource-agents-specs

./: .gitreview  README.md  README.rst  requirements.txt  setup.cfg  tox.ini
doc/source/: conf.py  index.rst
doc/source/specs/backlog/: index.rst
doc/source/specs/newton/: index.rst
priorities/: newton-priorities.rst
specs/: backlog-template.rst  newton-template.rst
specs/newton/approved/: newton-instance-ha-host-monitoring-spec.rst  newton-instance-ha-host-recovery.rst  newton-instance-ha-vm-monitoring-spec.rst  newton-instance-ha-vm-recovery-spec.rst
